refactor: DAO/service layering, scheduler properties, and English code documentation